--- a/src/style.css
+++ b/src/style.css
@@ -1,1 +1,38 @@
+header {
+    height: fit-content;
+    padding: 2rem 2rem 2rem 2rem;
+    border-bottom: 1px solid;
+    background-color: #eeeeee;
+}
 
+.nav {
+    display: flex;
+    justify-content: space-evenly;
+    margin-right: 5rem;
+    margin-left: 5rem;
+}
+
+.nav a {
+    font-size: 20px;
+    text-decoration: none;
+    color: black;
+}
+
+body {
+    width: 100vw;
+    height: 100vh;
+    margin: 0;
+    padding: 0;
+}
+
+footer {
+    display: flex;
+    justify-content: center;
+    position: absolute;
+    bottom: 0;
+    align-items: center;
+    width: 100%;
+    height: 2rem;
+    border-top: 1px solid;
+    background-color: #eeeeee;
+}
