--- a/src/style.css
+++ b/src/style.css
@@ -6,8 +6,7 @@ header {
 }
 
 .nav {
-    display: flex;
-    justify-content: space-evenly;
+    display: grid;
     margin-right: 5rem;
     margin-left: 5rem;
 }
@@ -19,8 +18,7 @@ header {
 }
 
 body {
-    width: 100vw;
-    height: 100vh;
+    width: 100dvw;
     margin: 0;
     padding: 0;
 }
