--- a/src/style.css
+++ b/src/style.css
@@ -1,17 +1,22 @@
 header {
+  	display: flex;
     height: fit-content;
+  	width: 100%;
     padding: 2rem 2rem 2rem 2rem;
     border-bottom: 1px solid;
     background-color: #eeeeee;
 }
 
 .nav {
-    display: grid;
+    display: flex;
+  	position: relative;
+  	right: 0;
     margin-right: 5rem;
     margin-left: 5rem;
 }
 
 .nav a {
+  	padding: 0rem 1rem 0 1rem;
     font-size: 20px;
     text-decoration: none;
     color: black;
@@ -33,4 +38,10 @@ footer {
     height: 2rem;
     border-top: 1px solid;
     background-color: #eeeeee;
+}
+
+@media screen and (max-width: 420px) {
+  .nav {
+    flex-direction: column;
+  }
 }
