--- a/src/style.css
+++ b/src/style.css
@@ -1,5 +1,6 @@
 header {
   	display: flex;
+  	align-items: centeR;
     height: fit-content;
   	width: 100%;
     padding: 2rem 2rem 2rem 2rem;
@@ -7,9 +8,16 @@ header {
     background-color: #eeeeee;
 }
 
+.logo {
+	height: auto;
+  	width: 5%;
+}
+
 .nav {
     display: flex;
-  	position: relative;
+  	justify-content: center;
+  	height: 100%;
+  	width: auto;
   	right: 0;
     margin-right: 5rem;
     margin-left: 5rem;
