--- a/src/style.css
+++ b/src/style.css
@@ -5,7 +5,7 @@
 
 header {
   	display: flex;
-  	align-items: centeR;
+  	align-items: center;
     height: fit-content;
   	width: 100%;
     padding: 2rem 2rem 2rem 2rem;
@@ -43,7 +43,7 @@ body {
 
 .showcase {
   	display: flex;
-  	height: fit-content;
+  	height: auto;
   	margin: 2rem;
 	background-color: #eeeeee;
 }
