--- a/src/style.css
+++ b/src/style.css
@@ -5,6 +5,7 @@
 
 * {
     box-sizing: border-box;
+    font-family: "Montserrat";
 }
 
 header {
@@ -19,20 +20,17 @@ header {
 
 .logo {
 	height: auto;
-  	width: 5%;
+  	width: 10%;
 }
 
 .nav {
     display: flex;
-  	justify-content: center;
   	height: 100%;
   	width: auto;
-    margin-right: 5rem;
-    margin-left: 5rem;
 }
 
 .nav a {
-  	padding: 0rem 1rem 0 1rem;
+  	margin: 0rem 2rem 0 2rem;
     font-size: 20px;
     text-decoration: none;
     color: black;
@@ -45,27 +43,19 @@ body {
     padding: 0;
 }
 
-.showcase {
-  	display: flex;
-    flex-wrap: wrap;
-  	height: auto;
-  	margin: 2rem;
-	background-color: #eeeeee;
-}
-
 footer {
     display: flex;
     justify-content: center;
+    align-items: center;
     position: absolute;
     bottom: 0;
-    align-items: center;
-    width: 100%;
     height: 2rem;
+    width: 100%;
     border-top: 1px solid;
     background-color: #eeeeee;
 }
 
-@media screen and (max-width: 420px) {
+@media screen and (max-width: 425px) {
   .nav {
     flex-direction: column;
   }
