--- a/src/style.css
+++ b/src/style.css
@@ -1,6 +1,6 @@
 :root {
-  	max-width: 100%;
-	overflow-x: hidden;
+    max-width: 100%;
+    overflow-x: hidden;
 }
 
 * {
@@ -27,6 +27,7 @@ header {
     display: flex;
   	height: 100%;
   	width: auto;
+    position: sticky;
 }
 
 .nav a {
@@ -34,6 +35,11 @@ header {
     font-size: 20px;
     text-decoration: none;
     color: black;
+    transition: 0.2s ease;
+}
+
+.nav a:hover {
+    color: white;
 }
 
 body {
@@ -43,20 +49,48 @@ body {
     padding: 0;
 }
 
+.showcase {
+    display: flex;
+    flex-wrap: wrap;
+    height: auto;
+    margin: 2rem;
+    border-radius: 15px;
+    background-color: #eeeeee;
+}
+
+.showcase div {
+    flex: 25%;
+    height: 350px;
+    margin: 2rem;
+    border-radius: 8px;
+    background-color: black;
+    transition: 0.3s ease;
+}
+
+.showcase div {
+    opacity: 0.3;
+}
+
+.showcase div:hover {
+    translate: 0 -1rem;
+    opacity: 1;
+}
+
 footer {
     display: flex;
     justify-content: center;
     align-items: center;
-    position: absolute;
-    bottom: 0;
     height: 2rem;
     width: 100%;
     border-top: 1px solid;
     background-color: #eeeeee;
 }
 
-@media screen and (max-width: 425px) {
-  .nav {
-    flex-direction: column;
-  }
+@media screen and (max-width: 600px) {
+    .nav {
+        flex-direction: column;
+    }
+    .showcase div {
+    flex: 100%;
+    }
 }
