--- a/src/style.css
+++ b/src/style.css
@@ -10,17 +10,18 @@
 
 header {
   	display: flex;
+    justify-content: space-between;
   	align-items: center;
     height: fit-content;
   	width: 100%;
     padding: 2rem 2rem 2rem 2rem;
     border-bottom: 1px solid;
-    background-color: #eeeeee;
 }
 
 .logo {
 	height: auto;
   	width: 10%;
+    margin-left: 4rem;
 }
 
 .nav {
@@ -28,6 +29,7 @@ header {
   	height: 100%;
   	width: auto;
     position: sticky;
+    margin-right: 2rem;
 }
 
 .nav a {
@@ -35,7 +37,7 @@ header {
     font-size: 20px;
     text-decoration: none;
     color: black;
-    transition: 0.2s ease;
+    transition: 0.1s ease;
 }
 
 .nav a:hover {
@@ -54,15 +56,13 @@ body {
     flex-wrap: wrap;
     height: auto;
     margin: 2rem;
-    border-radius: 15px;
-    background-color: #eeeeee;
 }
 
 .showcase div {
     flex: 25%;
     height: 350px;
     margin: 2rem;
-    border-radius: 8px;
+    border-radius: 2px;
     background-color: black;
     transition: 0.3s ease;
 }
@@ -82,8 +82,7 @@ footer {
     align-items: center;
     height: 2rem;
     width: 100%;
-    border-top: 1px solid;
-    background-color: #eeeeee;
+    
 }
 
 @media screen and (max-width: 600px) {
