--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -44,6 +44,10 @@ header {
     text-decoration: 1px underline;
 }
 
+.active {
+	color: #2d545e;
+}
+
 body {
   	height: auto;
     width: 100dvw;
