--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -41,7 +41,6 @@ header {
 
 .nav a:hover {
     scale: 1.1;
-    text-decoration: 1px underline;
 }
 
 .active {
@@ -75,6 +74,7 @@ body {
 .card:hover {
     translate: 0 -1rem;
     opacity: 1;
+	cursor: pointer;
 }
 
 .card::after {
