--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -19,7 +19,7 @@ header {
 }
 
 .logo {
-	height: auto;
+	  height: auto;
   	width: 10%;
     margin-left: 4rem;
 }
@@ -70,25 +70,29 @@ body {
 .card:hover {
     translate: 0 -1rem;
     opacity: 1;
-	cursor: pointer;
+	  cursor: pointer;
 }
 
-.card::after {
-    content: "Schweigårds vei 30A";
+.project {
+    visibility: hidden;
+    opacity: 0;
     position: absolute;
     bottom: 0;
     right: 0;
     margin: 1rem;
-    visibility: hidden;
-    opacity: 0;
-    font-size: 20px;
     color: white;
+    font-size: 14px;
     transition: 0.1s ease-in;
 }
 
-.card:hover::after {
+.card:hover .project {
     visibility: visible;
     opacity: 1;
+}
+
+.project h2 {
+    margin: 0;
+    padding: 0;
 }
 
 footer {
