--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -31,7 +31,8 @@ header {
     margin-right: 2rem;
 }
 
-.nav a {
+.nav-button, 
+.active {
   	margin: 0rem 2rem 0 2rem;
     font-size: 20px;
     text-decoration: none;
@@ -39,8 +40,13 @@ header {
     transition: 0.1s ease;
 }
 
-.nav a:hover {
+.nav-button:hover,
+.active:hover{
     scale: 1.1;
+}
+
+.active {
+    color: red;
 }
 
 body {
