--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -127,6 +127,9 @@ footer {
     .card:hover {
         translate: 0;
     }
+	.card.focused {
+        opacity: 1;
+    }
     .card.focused .project {
         visibility: visible;
         opacity: 1;
