--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -87,7 +87,6 @@ body {
     right: 0;
     margin: 1rem;
     color: white;
-    font-size: 14px;
     transition: 0.1s ease-in;
 }
 
@@ -96,7 +95,7 @@ body {
     opacity: 1;
 }
 
-.project h2 {
+.project p {
     margin: 0;
     padding: 0;
 }
