--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -1,3 +1,4 @@
+/* rules for index.html */
 :root {
     max-width: 100%;
     overflow-x: hidden;
@@ -108,6 +109,46 @@ footer {
     width: 100%;
 }
 
+.about-footer {
+    position: absolute;
+    bottom: 0;
+}
+
+/* section for about.html */
+.about-main {
+    display: flex;
+    justify-content: center;
+}
+
+.about-container {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    height: auto;
+    width: 50%;
+    margin: 5rem;
+}
+
+.headshot {
+    height: auto;
+    margin: 4rem 4rem 4rem 0;
+}
+
+.text-box {
+    display: flex;
+    flex-direction: column;
+    height: auto;
+    width: 50%;
+    margin: 2rem 0 2rem 4rem;
+}
+
+.text-box h1 {
+    margin: 0;
+    margin-bottom: 1rem;
+}
+
+/* rules for phone display */
 @media screen and (max-width: 600px) {
     :root {
         overflow-y: scroll;
@@ -135,5 +176,18 @@ footer {
     .card.focused .project {
         visibility: visible;
         opacity: 1;
+    }
+    .about-container {
+        flex-direction: column;
+        width: 100%;
+        margin: 0;
+    }
+    .headshot {
+        margin: 5rem 2rem 5rem 2rem;
+    }
+    .text-box {
+        text-align: center;
+        width: auto;
+        margin: 2rem;
     }
 }
