--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -9,6 +9,13 @@
     font-family: "Montserrat";
 }
 
+body {
+    height: auto;
+    width: 100dvw;
+    margin: 0;
+    padding: 0;
+}
+
 header {
     display: flex;
     justify-content: space-between;
@@ -40,20 +47,13 @@ header {
     transition: 0.1s ease;
 }
 
-.nav-button:hover,
-.active:hover{
+body.hasHover .nav-button:hover,
+body.hasHover .active:hover{
     scale: 1.1;
 }
 
 .active {
     color: red;
-}
-
-body {
-  	height: auto;
-    width: 100dvw;
-    margin: 0;
-    padding: 0;
 }
 
 .showcase {
@@ -74,7 +74,7 @@ body {
     transition: 0.3s ease;
 }
 
-.card:hover {
+body.hasHover .card:hover {
     translate: 0 -1rem;
     opacity: 1;
 	cursor: pointer;
@@ -91,7 +91,7 @@ body {
     transition: 0.1s ease-in;
 }
 
-.card:hover .project {
+body.hasHover .card:hover .project {
     visibility: visible;
     opacity: 1;
 }
@@ -109,10 +109,6 @@ footer {
     width: 100%;
 }
 
-.about-footer {
-    position: absolute;
-    bottom: 0;
-}
 
 /* section for about.html */
 .about-main {
@@ -148,6 +144,19 @@ footer {
     margin-bottom: 1rem;
 }
 
+.about-footer {
+    position: absolute;
+    bottom: 0;
+}
+
+
+/* section for contact.html */
+.contact-footer {
+    position: absolute;
+    bottom: 0;
+}
+
+
 /* rules for phone display */
 @media screen and (max-width: 600px) {
     :root {
@@ -167,10 +176,7 @@ footer {
         flex: 100%;
         scroll-snap-align: center;
     }
-    .card:hover {
-        translate: 0;
-    }
-	  .card.focused {
+	.card.focused {
         opacity: 1;
     }
     .card.focused .project {
