--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -83,7 +83,7 @@ body.hasHover .card:hover {
 .project {
     visibility: hidden;
     opacity: 0;
-    position: absolute;
+    position: fixed;
     bottom: 0;
     right: 0;
     margin: 1rem;
@@ -175,11 +175,16 @@ footer {
     .card {
         flex: 100%;
         scroll-snap-align: center;
+        transition: 0.5s ease;
     }
-	.card.focused {
+    .project {
+        position: relative;
+        transition: 0.3s ease-in 0.3s;
+    }
+	.card.hasFocus {
         opacity: 1;
     }
-    .card.focused .project {
+    .card.hasFocus .project {
         visibility: visible;
         opacity: 1;
     }
