--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -78,6 +78,7 @@ body.hasHover .card:hover {
     translate: 0 -1rem;
     opacity: 1;
 	cursor: pointer;
+    filter: grayscale(0);
 }
 
 .project {
