--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -1,17 +1,17 @@
 @keyframes slide-laptop {
     0% {
-        transform: translateY(-50px)
+        translate: 0 5vh;
     }
     100% {
-        transform: translateY(0);
+        translate: 0 0;
     }
 }
 @keyframes slide-mobile {
     0% {
-        transform: translateX(-50px);
+        translate: -10vw 0;
     }
     100% {
-        transform: translateX(0);
+        translate: 0 0;
     }
 }
 
@@ -86,6 +86,7 @@ body.hasHover .active:hover{
     height: 350px;
     margin: 2rem;
     opacity: 0.5;
+    overflow: hidden;
     border-radius: 2px;
     background-color: black;
     filter: grayscale(1);
@@ -97,7 +98,6 @@ body.hasHover .card:hover {
     opacity: 1;
 	cursor: pointer;
     filter: grayscale(0);
-    
 }
 
 .project {
@@ -114,6 +114,9 @@ body.hasHover .card:hover {
 body.hasHover .card:hover .project {
     visibility: visible;
     opacity: 1;
+    animation-name: slide-laptop;
+    animation-duration: 0.3s;
+    animation-iteration-count: 1;
 }
 
 .project p {
@@ -251,6 +254,11 @@ body.hasHover .facebook img:hover {
     .card.hasFocus .project {
         visibility: visible;
         opacity: 1;
+        animation-name: slide-mobile;
+        animation-duration: 0.3s;
+        animation-iteration-count: 1;
+        animation-delay: 0.3s;
+        
     }
     .about-container {
         flex-direction: column;
