--- a/assets/styles/404.css
+++ b/assets/styles/404.css
@@ -1,3 +1,18 @@
 * {
+    box-sizing: border-box;
     font-family: "Montserrat";
+}
+
+body {
+    height: auto;
+    width: 100dvw;
+    max-width: 100%;
+    margin: 0;
+    padding: 0;
+}
+
+.404 {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
 }
