--- a/assets/styles/404.css
+++ b/assets/styles/404.css
@@ -16,8 +16,23 @@ body {
     padding: 0;
 }
 
+main {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
 .404 {
     display: flex;
     flex-direction: column;
+}
+
+footer {
+    display: flex;
     justify-content: center;
+    align-items: center;
+    position: absolute;
+    bottom: 0;
+    height: 2rem;
+    width: 100%;
 }
