--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -117,6 +117,11 @@ body.hasHover .card:hover {
     text-decoration: none;
 }
 
+.project-image img {
+    height: 100%;
+    width: 100%;
+}
+
 .project-name {
     position: fixed;
     bottom: 0;
@@ -126,6 +131,7 @@ body.hasHover .card:hover {
     margin: 1rem;
     color: white;
     transition: 0.1s ease-in;
+    z-index: 999;
 }
 
 body.hasHover .card:hover .project-name {
@@ -261,7 +267,7 @@ body.hasHover .facebook img:hover {
         scroll-snap-align: start;
     }
     .logo {
-        width: 20%;
+        width: 15%;
     }
     .nav {
         flex-direction: column;
