--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -14,6 +14,14 @@
         translate: 0 0;
     }
 }
+@keyframes slide-mobile-rev {
+    0% {
+        translate: 0 0;
+    }
+    100% {
+        translate: -10vw 0;
+    }
+}
 
 /* rules for index.html */
 :root {
@@ -302,10 +310,10 @@ body.hasHover .facebook img:hover {
     .card.lostFocus .project-name-container {
         visibility: hidden;
         opacity: 0;
-        animation-name: slide-mobile;
+        animation-name: slide-mobile-rev;
         animation-duration: 0.3s;
         animation-iteration-count: 1;
-        animation-direction: reverse;
+        animation-delay: 0.3s;
     }
     .about-container {
         flex-direction: column;
