--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -235,6 +235,12 @@ footer {
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    text-align: center;
+}
+
+.contact-container {
+    display: flex;
+    flex-direction: column;
 }
 
 .links {
@@ -268,8 +274,18 @@ body.hasHover .facebook img:hover {
 }
 
 .info {
+    display: flex;
+    flex-direction: column;
     margin: 5rem;
     text-align: center;
+}
+
+.info-email {
+    display: flex;
+}
+
+.info-location {
+    display: flex;
 }
 
 .contact-footer {
