--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -247,7 +247,7 @@ footer {
     display: flex;
     height: auto;
     width: auto;
-    margin: 5rem;
+    margin: 1rem 5rem 5rem 5rem;
 }
 
 .instagram,
