--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -273,10 +273,14 @@ body.hasHover .facebook img:hover {
     box-shadow: rgba(0, 0, 0, 0.5) 0px 3px 8px;
 }
 
+.hero-title {
+    margin-top: 2rem;
+}
+
 .info {
     display: flex;
     flex-direction: column;
-    margin: 5rem;
+    margin: 2rem;
     text-align: center;
 }
 
