--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -245,6 +245,7 @@ footer {
 
 .links {
     display: flex;
+    justify-content: center;
     height: auto;
     width: auto;
     margin: 1rem 5rem 5rem 5rem;
