--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -193,7 +193,6 @@ footer {
     flex-direction: row;
     justify-content: center;
     align-items: center;
-    height: auto;
     width: 50%;
     margin: 5rem;
     background-color: #eee;
@@ -201,11 +200,12 @@ footer {
 }
 
 .headshot {
-    height: auto;
+    height: 100%;
     width: 500px;
 }
 
 .headshot img {
+    height: 100%;
     width: 100%;
     border-radius: 2px;
 }
@@ -213,7 +213,6 @@ footer {
 .text-box {
     display: flex;
     flex-direction: column;
-    height: auto;
     width: 50%;
     margin: 2rem 0 2rem 2rem;
 }
