--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -22,6 +22,22 @@
         translate: 10vw 0;
     }
 }
+@keyframes slide-body {
+    0% {
+        translate: 0 0;
+    }
+    100% {
+        translate: -200vw 0;
+    }
+}
+@keyframes slide-body-project {
+    0% {
+        translate: 200vw 0;
+    }
+    100% {
+        translate: 0 0;
+    }
+}
 
 /* rules for index.html */
 :root {
