Disable context menu for testing

--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -49,6 +49,7 @@
     box-sizing: border-box;
     font-family: "Montserrat";
     -webkit-tap-highlight-color: transparent;
+    user-select: none;
 }
 
 body.hasHover a:active {
