--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -444,15 +444,12 @@ body.hasHover .back-button img:hover {
         margin-top: 2px;
         margin-bottom: 2px;
     }
-    .nav-button:active, 
-    .active:active {
-        color: grey;
-    }
     .showcase {
         margin: 2rem 0 2rem 0;
     }
     .card {
         flex: 100%;
+        opacity: 0.8;
         scroll-snap-align: center;
         transition: 0.5s ease;
     }
