--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -496,7 +496,7 @@ body.hasHover .back-button img:hover {
     }
     .contact-container {
         justify-content: space-evenly;
-        height: 500px;
+        height: 100%;
         width: 90%;
         margin-top: 0;
         background-color: white;
@@ -519,7 +519,7 @@ body.hasHover .back-button img:hover {
     .socials,
     .links {
         position: relative;
-        top: 3rem;
+        top: 5rem;
     }
     .back-button {
         left: 30px;
