--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -248,7 +248,6 @@ footer {
 .contact-main {
     display: flex;
     flex-direction: column;
-    justify-content: center;
     align-items: center;
     text-align: center;
 }
@@ -494,15 +493,17 @@ body.hasHover .back-button img:hover {
         visibility: hidden;
     }
     .contact-main {
-        display: flex;
-        justify-content: center;
+        display: block;
+        min-height: calc(100vh - 109px - 32px);
     }
     .contact-container {
         display: flex;
         flex-direction: column;
+        justify-content: start;
         align-items: center;
-        height: auto;
-        width: 90%;
+        position: relative;
+        height: calc(100vh - 109px - 32px);
+        width: 100%;
         margin: 0;
         padding: 2rem 0 2rem 0;
         border: none;
@@ -522,7 +523,7 @@ body.hasHover .back-button img:hover {
     }
     .socials {
         margin: 0;
-        margin-top: 2rem;
+        margin-bottom: 4rem;
     }
     .socials p {
         margin: 0;
@@ -535,8 +536,8 @@ body.hasHover .back-button img:hover {
     }
     .socials, 
     .links {
-        position: relative;
-        top: 9rem;
+        position: absolute;
+        bottom: 0;
     }
     .back-button {
         left: 30px;
