--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -250,6 +250,7 @@ footer {
     flex-direction: column;
     align-items: center;
     text-align: center;
+    overflow: hidden;
 }
 
 .contact-container {
